--- a/changelog
+++ b/changelog
@@ -1,2 +1,8 @@
 • added incognito & spartan speed
 • added test module
+
+• fixed vulcan disabler
+• fixed config loading
+• fixed aim assist
+
+• renamed skycave flight to blink flight
