--- a/changelog
+++ b/changelog
@@ -1,9 +1,12 @@
 • added incognito & spartan speed
 • added test module
 
+• fixed a lot of warnings
 • fixed vulcan disabler
 • fixed config loading
+• fixed a lot of bugs
 • fixed aim assist
 
 • renamed skycave flight to blink flight
 • made the intave noslow better
+• shortened a lot of code
